<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>de.ddb.labs</groupId>
    <artifactId>DDBfart</artifactId>
    <version>1.2</version>
    <packaging>jar</packaging>
    <name>DDBfart</name>
    <url>https://mbuechner.github.io/ddbfart/</url>
    <description>A search and replace text tool for big data dumps.</description>
    <licenses>
        <license>
            <name>The Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0</url>
        </license>
    </licenses>
    <developers>
        <developer>
            <id>mbuechner</id>
            <name>Michael Büchner</name>
            <organization>Deutsche Digitale Bibliothek</organization>
        </developer>
    </developers>
    <organization>
        <name>Deutsche Digitale Bibliothek</name>
        <url>https://www.deutsche-digitale-bibliothek.de/</url>
    </organization>
    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/mbuechner/ddbfart/issues</url>
    </issueManagement>
    <scm>
        <connection>scm:git:https://github.com/mbuechner/ddbfart.git</connection>
        <url>https://github.com/mbuechner/ddbfart</url>
    </scm>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-text</artifactId>
            <version>1.10.0</version>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.11.0</version>
            <type>jar</type>
        </dependency>
    </dependencies>
    <reporting>
        <plugins>
            <plugin>
                <groupId>com.github.spotbugs</groupId>
                <artifactId>spotbugs-maven-plugin</artifactId>
                <version>4.7.2.1</version>
                <configuration>
                    <xmlOutput>true</xmlOutput>
                    <!-- Optional directory to put spotbugs xdoc xml report -->
                    <xmlOutputDirectory>target/site</xmlOutputDirectory>
                </configuration>
            </plugin>
        </plugins>
    </reporting>
    <build>
        <plugins>
            <plugin>
                <groupId>com.github.spotbugs</groupId>
                <artifactId>spotbugs-maven-plugin</artifactId>
                <version>4.7.2.1</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-site-plugin</artifactId>
                <version>3.12.1</version>
                <configuration>
                    <outputDirectory>${basedir}/docs</outputDirectory>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>com.bernardomg.maven.skins</groupId>
                        <artifactId>docs-maven-skin</artifactId>
                        <version>2.2.7</version>
                    </dependency> 
                </dependencies>           
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-project-info-reports-plugin</artifactId>
                <version>3.4.1</version>
            </plugin>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>de.ddb.labs.ddbfart.App</mainClass>
                        </manifest>
                    </archive>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                        <configuration>
                            <descriptorRefs>
                                <descriptorRef>jar-with-dependencies</descriptorRef>
                            </descriptorRefs>
                            <finalName>ddbfart</finalName>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
                <configuration>
                    <showDeprecation>true</showDeprecation>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.akathist.maven.plugins.launch4j</groupId>
                <artifactId>launch4j-maven-plugin</artifactId>
                <version>2.1.2</version>
                <executions>
                    <execution>
                        <id>l4j-gui</id>
                        <phase>package</phase>
                        <goals>
                            <goal>launch4j</goal>
                        </goals>
                        <configuration>
                            <headerType>gui</headerType>
                            <outfile>target/${project.artifactId}-${project.version}.exe</outfile>
                            <jar>target/${project.artifactId}-jar-with-dependencies.jar</jar>
                            <dontWrapJar>false</dontWrapJar>
                            <errTitle>Error in launch4j plugin</errTitle>
                            <classPath>
                                <mainClass>de.ddb.labs.ddbfart.App</mainClass>
                            </classPath>
                            <icon>src/main/resources/icon.ico</icon>
                            <jre>
                                <path>%JAVA_HOME%</path>
                                <minVersion>1.8.0</minVersion>
                                <!--<maxVersion>1.8.0</maxVersion>-->
                                <initialHeapSize>512</initialHeapSize>
                                <maxHeapSize>1024</maxHeapSize>
                            </jre>
                            <versionInfo>
                                <fileVersion>1.0.0.0</fileVersion>
                                <txtFileVersion>1.0.0.0</txtFileVersion>
                                <fileDescription>${project.name}</fileDescription>
                                <copyright>Copyright (c) 2019-2022 Michael Büchner</copyright>
                                <companyName>Deutsche Digitale Bibliothek</companyName>
                                <productVersion>3.0.0.0</productVersion>
                                <txtProductVersion>${project.version}</txtProductVersion>
                                <productName>${project.name}</productName>
                                <language>ENGLISH</language>
                                <internalName>${project.name}</internalName>
                                <originalFilename>${project.artifactId}-${project.version}.exe</originalFilename>
                            </versionInfo>
                            <messages>
                                <startupErr>Error while starting ${project.name}.</startupErr>
                                <bundledJreErr>Bundle error startung ${project.name}.</bundledJreErr>
                                <jreVersionErr>${project.name} does require Java 8 or higher.</jreVersionErr>
                                <launcherErr>Error running ${project.name}.</launcherErr>
                                <!-- Used by console header only. -->
                                <instanceAlreadyExistsMsg>${project.name} is already running.</instanceAlreadyExistsMsg>
                            </messages>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
